# agent-ready

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SKILL.md  action.yml  agent-ready.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: action-smoke.yml  agent-ready-check.yml  demo-assets.yml  test.yml
agent_ready/: __init__.py  __main__.py  baseline.py  cli.py  comment.py  config.py  files.py  github.py  payload.py  plan.py  sarif.py  scan.py  scorecard.py  validation.py
agents/: openai.yaml
examples/demo-output/: AGENTS.md  PR_BODY.md  agent-ready.config.json  agent-ready.yml  baseline.json  before-after.md  check.md  check.sarif  diff.json  diff.md  mcp-recommendations.md  plan.json  plan.md  pr-comment.json  pr-comment.md  ready-after.txt  report.md  scan-before.txt  scorecard.json  scorecard.md  summary.json  summary.md  validation-dry-run.md  validation-plan.md
examples/demo-repo/: README.md  package.json
examples/demo-repo/apps/web/: package.json
examples/demo-repo/apps/web/src/: App.tsx
examples/demo-repo/services/api/tests/: test_health.py
examples/demo-repo/src/: main.ts
scripts/: __init__.py  agent_ready.py  build_demo_assets.py  dev.py  release_check.py  test_agent_ready.py
